# Correlation_engine

./: .env.example  .gitignore  Project_overview.md  README.md  pyproject.toml
backlog/: phase-01-project-scaffolding.md  phase-02-data-ingestion.md  phase-03-preprocessing-pipeline.md  phase-04-core-correlation-analysis.md  phase-05-statistical-robustness.md  phase-06-advanced-analysis.md  phase-07-streamlit-dashboard.md  phase-08-universe-watchlist.md  phase-09-scanner-scoring.md  phase-10-findings-store.md  phase-11-reporting.md  phase-12-cli-scheduler.md  phase-13-discovery-dashboard.md
config/: scoring.yaml  universe.yaml
dashboard/: app.py
dashboard/.streamlit/: config.toml
dashboard/pages/: correlation_matrix.py  data_loader.py  dcc_garch.py  granger.py  home.py  lead_lag.py  network.py  preprocessing.py  rolling.py  significance.py
data/sample/: equity_prices.csv  macro_indicators.csv
src/correlation_engine/: __init__.py
src/correlation_engine/analysis/: __init__.py  correlation.py  dcc_garch.py  granger.py  lag.py  rolling.py  significance.py
src/correlation_engine/discovery/: __init__.py  findings.py  scanner.py  scoring.py  watchlist.py
src/correlation_engine/ingest/: __init__.py  base.py  cache.py  csv_loader.py  fred.py  yahoo.py
src/correlation_engine/preprocessing/: __init__.py  align.py  missing.py  pipeline.py  transform.py
tests/: test_correlation.py  test_dcc_garch.py  test_findings_db.py  test_granger.py  test_ingest.py  test_network.py  test_preprocessing.py  test_scanner.py  test_significance.py  test_watchlist.py
(+8 files in other folders)
