[project]
name = "correlation-engine"
version = "0.1.0"
description = "Reproducible Python toolkit for computing, visualizing, and exploring correlations (including lead/lag relationships) among any number of time-series datasets."
readme = "README.md"
authors = [
    { name = "adkf37", email = "aarondfeinstein@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.11",
    "statsmodels>=0.14",
    "arch>=6.0",
    "plotly>=5.18",
    "seaborn>=0.13",
    "matplotlib>=3.8",
    "streamlit>=1.30",
    "fredapi>=0.5",
    "yfinance>=0.2.30",
    "networkx>=3.2",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4",
    "ruff>=0.3",
    "mypy>=1.8",
]

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"
